Create Map Task that will be run for word count